@@ -95,10 +95,13 @@ subprojects {
             testRuntimeOnly("org.slf4j:slf4j-simple")
         }
 
-        // tasks.withType<Test> {
-        //     jvmArgs("-XX:+EnableDynamicAgentLoading")
-        // }
-        test {
+        // test {
+        // tasks.named("test")
+        tasks.withType(Test).configureEach {
+            enabled = true
+            ignoreFailures = false
+            useJUnitPlatform()
+
             String mockitoFiles = configurations.mockitoAgent.asPath
 
             doFirst {
